[package]
name = "iyanls"
version = "0.3.2"
edition = "2024"
authors = ["LordPaijo (Iyan) <iyanmaumakan.56@gmail.com>"]
description = "My custom build of `ls` in Rust."
license = "MIT"
repository = "https://github.com/lordpaijo/iyanls"
documentation = "https://docs.rs/iyanls"

[[bin]]
name = "iyanls"
path = "src/main.rs"

[[bin]]
name = "ils"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
owo-colors = "4.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
tabled = "0.20.0"
rayon = "1.10.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
